# LaTeXGrapher

./: LICENSE  LaTeXGrapher.cabal
examples/: Introduction.txt  calcHw3.txt  discont2.txt  discontinuous.txt  markup.txt  shade.txt  simple.txt  step.txt  step2.txt  test.txt
src/: Main.hs
src/LaTeXGrapher/: Diagrams.hs  Math.hs  Output.hs  Parser.hs  Plot.hs  Repl.hs
src/LaTeXGrapher/Data/: Context.hs  Expression.hs  Function.hs  Markup.hs  Tabular.hs
src/LaTeXGrapher/Math/: Bool.hs
src/LaTeXGrapher/Parser/: Expression.hs  Grammer.hs  Markup.hs  WhiteSpace.hs
tests/: ExpressionTests.hs  KnownPlotIssues.txt
tex/: latexgrapher.sty  test.tex
